--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
 
 	<title>Мишка</title>
 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&amp;subset=cyrillic" rel="stylesheet">
+
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
@@ -18,7 +20,7 @@
       <div class="navigationPanel-toogle" id="navigationPanel-toogle_id">
 
         <a class="navigationPanel-logo" href="#">
-          <img src="img/navigationPanel/mishka-logo-mobile.png" alt="logo" height="35px" width="86px">
+          <img src="img/navigationPanel/logo.svg" alt="logo" height="35px" width="86px">
         </a>
 
         <div class="hamburger">
@@ -55,7 +57,6 @@
 <!--===========================================================-->
 <!--____________________ Hand Made section ____________________-->
 <section class="handMade">
-  <!-- <div class="container"> -->
 
     <h1 class="handMade-title">Милые штуки ручной работы для дома</h1>
 
@@ -71,11 +72,12 @@
       </div>
     </div>
 
-  <!-- </div>     -->
 </section>
 
 
 
+<!--==============================================================-->
+<!--____________________ product week section ____________________-->
 <section class="productWeek">
   <div class="container">
 
@@ -87,7 +89,7 @@
     <p class="productWeek-description">Экологически чистая пряжа, ручная работа. Доступны в шести
     расцветках, и трех размерах.</p>
 
-    <table class="productWeek-characteristic">
+    <table class="productWeek-characteristicTable">
       <tr>
         <td>Цвет:</td>
         <td>«Тиффани»/серый</td>
@@ -102,11 +104,11 @@
       </tr>
     </table>
 
-    <img src="img/productWeek/knittedItem_mobile.jpg" alt="Knitted Item">
+    <img src="img/productWeek/knittedItem.jpg" alt="Knitted Item">
 
     <div class="productWeek-order">      
       <p>Цена: 990 руб.</p>
-      <button>Заказать</button>
+      <a class="productWeek-order-btn">Заказать</a>
     </div>
 
   </div>
@@ -114,51 +116,125 @@
 
 
 
+<!--=======================================================-->
+<!--____________________ about section ____________________-->
 <section class="about">
   <div class="container">
+
+    <h2>Коротко о нас:</h2>
+
     <div class="about-point">
-      <img src="" alt="">
+      <img src="img/about/flower.svg" alt="">
       <p>Экологически чистые материалы</p>
     </div>
     <div class="about-point">
-      <img src="" alt="">
+      <img src="img/about/photoCamera.svg" alt="">
       <p>Скандинавский стиль по российской цене</p>
     </div>
     <div class="about-point">
-      <img src="" alt="">
+      <img src="img/about/love.svg" alt="">
       <p>Увеличивает лайки на фотографиях</p>
     </div>
     <div class="about-point">
-      <img src="" alt="">
+      <img src="img/about/ball.svg" alt="">
       <p>Связано вручную с любовью и умением</p>
     </div>
     <div class="about-point">
-      <img src="" alt="">
+      <img class="rocket" src="img/about/rocket.svg" alt="">
       <p>Поддержка отечественного производителя</p>
     </div>
     <div class="about-point">
-      <img src="" alt="">
+      <img src="img/about/present.svg" alt="">
       <p>Поставяется в подарочной упаковке</p>
     </div>
+
   </div>     
 </section>
 
 
 
+<!--=========================================================-->
+<!--____________________ reviews section ____________________-->
 <section class="reviews">
   <div class="container">
-    <p>Я молодая мама, но все равно фотографии не набирали и близко 
-    такого количества лайков, как у популярных инстамамочек. 
-    В отчаянии, я накупила аксессуаров и игрушек в Мишке и мои фотографии 
-    сразу стали более стильные, а так же набирают больше лайков!</p>
-    <p>Анастасия Красильникова</p>
-    <a href="">@misssssiskras</a>
-    <button></button>
-    <button></button>
-    <button>написать</button>
+
+    <h2>Отзывы</h2>
+
+    <div class="reviews-authorBox">
+      <p class="reviews-authorBox-review">Я молодая мама, но все равно фотографии не набирали и близко 
+      такого количества лайков, как у популярных инстамамочек. 
+      В отчаянии, я накупила аксессуаров и игрушек в Мишке и мои фотографии 
+      сразу стали более стильные, а так же набирают больше лайков!</p>
+
+      <p class="reviews-authorBox-author">Анастасия Красильникова</p>
+      <a class="reviews-authorBox-authorInstagram" href="https://www.instagram.com/">@misssssiskras</a>
+    </div>
+
+    <div class="reviews-arrowBox">
+      <button class="reviews-arrowLeft"><img src="img/reviews/arrow-left.svg" alt=""></button>
+      <button class="reviews-arrowRight"><img src="img/reviews/arrow-right.svg" alt=""></button>
+    </div>
+
+    <a href="#" class="reviews-btn">написать</a>
+
   </div>
 </section>
 
+
+
+<!--=========================================================-->
+<!--____________________ contacts section ____________________-->
+<section class="contacts">
+  <div class="container">
+    <h2>Контакты</h2>
+
+    <table class="contacts-addressTable">
+      <tr>
+        <td>email:</td>
+        <td>info@mimimishkashop.ru</td>
+      </tr>
+      <tr>
+        <td>Адрес:</td>
+        <td>
+          г.&nbsp;Санкт-Петербург,
+          ул.&nbsp;Большая Конюшенная,
+          д.&nbsp;19/8,&nbsp;офис&nbsp;101
+        </td>
+      </tr>
+    </table>
+  </div>
+    <!-- <img src="img/contacts/map-tablet.jpg" alt="Карта"> -->
+    <div class="contacts-map">
+      
+    </div>
+
+    <div class="container">
+      <a href="#" class="contacts-btn">напишите нам</a>
+    </div>
+</section>
+
+
+
+<!--================================================-->
+<!--____________________ footer ____________________-->
+<footer>
+  <div class="container">
+
+    <div class="border_wrapper">
+      <div class="social">
+        <a href=""><img src="img/footer/icon_instagram.svg" alt="instagram"></a>
+        <a href=""><img class="footer-facebookImg" src="img/footer/icon_facebook.svg" alt="facebook"></a>
+        <a href=""><img src="img/footer/icon_twitter.svg" alt="twitter"></a>
+      </div>
+    </div>
+
+    <a class="htmlAcademy" href="">
+      Разработано
+      <img class="footer-htmlacademyImg" src="img/footer/icon_htmlacademy.svg" alt="htmlacademy">
+    </a>
+
+  </div>
+</footer>
 
 
 <!-- <script src="js/libs.min.js"></script> -->
