Hover/active behavior added at social icons and contact, review btns.

--- a/app/index.html
+++ b/app/index.html
@@ -171,8 +171,8 @@
     </div>
 
     <div class="reviews-arrowBox">
-      <button class="reviews-arrowLeft"><img src="img/reviews/arrow-left.svg" alt=""></button>
-      <button class="reviews-arrowRight"><img src="img/reviews/arrow-right.svg" alt=""></button>
+      <button class="reviews-arrowLeft"></button>
+      <button class="reviews-arrowRight"></button>
     </div>
 
     <a href="#" class="reviews-btn">написать</a>
@@ -191,7 +191,7 @@
     <table class="contacts-addressTable">
       <tr>
         <td>email:</td>
-        <td>info@mimimishkashop.ru</td>
+        <td class="contacts-email">info@mimimishkashop.ru</td>
       </tr>
       <tr>
         <td>Адрес:</td>
@@ -222,9 +222,9 @@
 
     <div class="border_wrapper">
       <div class="social">
-        <a href=""><img src="img/footer/icon_instagram.svg" alt="instagram"></a>
+        <a href=""><img class="footer-instagramImg" src="img/footer/icon_instagram.svg" alt="instagram"></a>
         <a href=""><img class="footer-facebookImg" src="img/footer/icon_facebook.svg" alt="facebook"></a>
-        <a href=""><img src="img/footer/icon_twitter.svg" alt="twitter"></a>
+        <a href=""><img class="footer-twitterImg" src="img/footer/icon_twitter.svg" alt="twitter"></a>
       </div>
     </div>
 
