--- a/app/index.html
+++ b/app/index.html
@@ -84,14 +84,15 @@
 <!--==============================================================-->
 <!--____________________ product week section ____________________-->
 <section class="productWeek">
-  <div class="container">
 
     <header>
       <h2>Вязаные корзинки</h2>
       <p>товар недели</p>
     </header>
 
-    <!-- <div class="productWeek-orderBox"> -->
+  <div class="container">
+
+    <div class="productWeek-orderBox">
       <p class="productWeek-description">Экологически чистая пряжа, ручная работа. Доступны в шести
       расцветках, и трех размерах.</p>
 
@@ -110,15 +111,16 @@
         </tr>
       </table>
 
-      <img src="img/productWeek/knittedItem.jpg" alt="Knitted Item">
-
       <div class="productWeek-order">      
         <p>Цена: 990 руб.</p>
         <a class="productWeek-order-btn">Заказать</a>
       </div>
-    <!-- </div> -->
+    </div>
 
-  </div>
+    <img src="img/productWeek/knittedItem.jpg" alt="Knitted Item">   
+
+  </div> 
+
 </section>
 
 
