Reviews section for tablet version is complete.

--- a/app/index.html
+++ b/app/index.html
@@ -132,29 +132,38 @@
 
     <h2>Коротко о нас:</h2>
 
-    <div class="about-point">
-      <img src="img/about/flower.svg" alt="">
-      <p>Экологически чистые материалы</p>
-    </div>
-    <div class="about-point">
-      <img src="img/about/photoCamera.svg" alt="">
-      <p>Скандинавский стиль по российской цене</p>
-    </div>
-    <div class="about-point">
-      <img src="img/about/love.svg" alt="">
-      <p>Увеличивает лайки на фотографиях</p>
-    </div>
-    <div class="about-point">
-      <img src="img/about/ball.svg" alt="">
-      <p>Связано вручную с любовью и умением</p>
-    </div>
-    <div class="about-point">
-      <img class="rocket" src="img/about/rocket.svg" alt="">
-      <p>Поддержка отечественного производителя</p>
-    </div>
-    <div class="about-point">
-      <img src="img/about/present.svg" alt="">
-      <p>Поставяется в подарочной упаковке</p>
+    <div class="about-pointsBox">
+      
+      <div class="about-pointsBox-leftColumn">
+        <div class="about-point">
+          <img src="img/about/flower.svg" alt="">
+          <p>Экологически чистые материалы</p>
+        </div>
+        <div class="about-point">
+          <img src="img/about/photoCamera.svg" alt="">
+          <p>Скандинавский стиль по российской цене</p>
+        </div>
+        <div class="about-point">
+          <img src="img/about/love.svg" alt="">
+          <p>Увеличивает лайки на фотографиях</p>
+        </div>
+      </div>
+
+      <div class="about-pointsBox-rightColumn">
+        <div class="about-point">
+          <img src="img/about/ball.svg" alt="">
+          <p>Связано вручную с любовью и умением</p>
+        </div>
+        <div class="about-point">
+          <img class="rocket" src="img/about/rocket.svg" alt="">
+          <p>Поддержка отечественного производителя</p>
+        </div>
+        <div class="about-point">
+          <img src="img/about/present.svg" alt="">
+          <p>Поставяется в подарочной упаковке</p>
+        </div>
+      </div>
+
     </div>
 
   </div>     
