Home page for tablet version is complete.

--- a/app/index.html
+++ b/app/index.html
@@ -206,20 +206,24 @@
   <div class="container">
     <h2>Контакты</h2>
 
-    <table class="contacts-addressTable">
-      <tr>
-        <td>email:</td>
-        <td class="contacts-email">info@mimimishkashop.ru</td>
-      </tr>
-      <tr>
-        <td>Адрес:</td>
-        <td>
+    <div class="contacts-informationBox">
+
+      <div class="contacts-information">
+        <p class="emailLabel">email:</p>
+        <p class="email">info@mimimishkashop.ru</p>
+      </div>
+
+      <div class="contacts-information">
+        <p class="addressLabel">Адрес:</p>
+        <p class="address">
           г.&nbsp;Санкт-Петербург,
           ул.&nbsp;Большая Конюшенная,
           д.&nbsp;19/8,&nbsp;офис&nbsp;101
-        </td>
-      </tr>
-    </table>
+        </p>
+      </div>
+
+    </div>
+
   </div>
     <!-- <img src="img/contacts/map-tablet.jpg" alt="Карта"> -->
     <div class="contacts-map">
@@ -238,11 +242,13 @@
 <footer>
   <div class="container">
 
+    <img class="footer-logo" src="img/footer/footer_logo.svg" alt="">
+
     <div class="border_wrapper">
       <div class="social">
-        <a href=""><img class="footer-instagramImg" src="img/footer/icon_instagram.svg" alt="instagram"></a>
-        <a href=""><img class="footer-facebookImg" src="img/footer/icon_facebook.svg" alt="facebook"></a>
-        <a href=""><img class="footer-twitterImg" src="img/footer/icon_twitter.svg" alt="twitter"></a>
+        <a href=""><img class="socialImg footer-instagramImg" src="img/footer/icon_instagram.svg" alt="instagram"></a>
+        <a href=""><img class="socialImg footer-facebookImg" src="img/footer/icon_facebook.svg" alt="facebook"></a>
+        <a href=""><img class="socialImg footer-twitterImg" src="img/footer/icon_twitter.svg" alt="twitter"></a>
       </div>
     </div>
 
