Review section for desktop version is complete.

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
 
         <a class="navigationPanel-logo" href="#">
           <picture>
+            <source media="(min-width: 1150px)" srcset="img/navigationPanel/logo_desktop.svg">
             <source media="(min-width: 768px)" srcset="img/navigationPanel/logo_tablet.svg">
             <img src="img/navigationPanel/logo.svg" alt="logo" height="35px" width="86px">
           </picture>          
@@ -50,7 +51,13 @@
         </li>
         <li class="navigationPanel-navigation-cart">
           <a href="#"><p class="navigationPanel-navigation-cart-p">Корзина: пока пуста</p></a>
-        </li>  
+        </li>
+        <li class="navigationPanel-navigation-newIncome">
+          <a class="" href="#"><p>Новые поступления</p></a>
+        </li>
+        <li class="navigationPanel-navigation-selOut">
+          <a class="" href="#"><p>Распродажа</p></a>
+        </li>
       </ul>  
     </nav>
 
